Add basic X509 certificate support

--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -644,6 +644,7 @@ organization_leave_success = You have successfully left the organization %s.
 
 invalid_ssh_key = Cannot verify your SSH key: %s
 invalid_gpg_key = Cannot verify your GPG key: %s
+invalid_x509_cert = Cannot verify your X.509 certificate: %s
 invalid_ssh_principal = Invalid principal: %s
 must_use_public_key = The key you provided is a private key. Please do not upload your private key anywhere. Use your public key instead.
 unable_verify_ssh_key = "Cannot verify the SSH key, double-check it for mistakes."
@@ -878,6 +879,7 @@ key_content = Content
 principal_content = Content
 add_key_success = The SSH key "%s" has been added.
 add_gpg_key_success = The GPG key "%s" has been added.
+add_x509_cert_success = The X.509 certificate has been added.
 add_principal_success = The SSH certificate principal "%s" has been added.
 delete_key = Remove
 ssh_key_deletion = Remove SSH Key
