Add trusted certificate store management

--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -719,6 +719,7 @@ password = Password
 security = Security
 avatar = Avatar
 ssh_gpg_keys = SSH / GPG Keys
+trusted_certs = Trusted Root Certificates
 social = Social Accounts
 applications = Applications
 orgs = Manage Organizations
@@ -880,6 +881,10 @@ principal_content = Content
 add_key_success = The SSH key "%s" has been added.
 add_gpg_key_success = The GPG key "%s" has been added.
 add_x509_cert_success = The X.509 certificate has been added.
+add_trusted_cert_success = The trusted root certificate has been added.
+trusted_cert_deletion = Remove Trusted Root Certificate
+trusted_cert_deletion_desc = Removing a trusted root certificate will stop trusting signatures from it. Continue?
+trusted_cert_deletion_success = The trusted root certificate has been removed.
 add_principal_success = The SSH certificate principal "%s" has been added.
 delete_key = Remove
 ssh_key_deletion = Remove SSH Key
@@ -2941,6 +2946,7 @@ config = Configuration
 config_summary = Summary
 config_settings = Settings
 notices = System Notices
+trusted_certs = Trusted Root Certificates
 monitor = Monitoring
 first_page = First
 last_page = Last
